03_infrastructure/traefik/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  gatewayClassName: traefik

  # Only Routes from the same namespace are allowed.
  listeners:
    - name: http-default
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All 

    # - name: certmanager
    #   protocol: HTTPS
    #   port: 443
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: secret-tls
    #         namespace: default

    #   allowedRoutes:
    #     namespaces:
    #       from: All
